--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "devwarehouse",
   "version": "1.0.0",
   "description": "api do e-commerce",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
